--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ black = "*"
 [packages]
 flask = "*"
 flask-wtf = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
 
 [requires]
 python_version = "3.8"
